<resources>
    <string name="app_name">Circular Peabiru</string>
    <string name="hor_rio_da_circular">HORÁRIO DA CIRCULAR</string>
    <string name="peabiru_campo_mour_o">PEABIRU - CAMPO MOURÃO</string>
    <string name="s_bados">SÁBADOS</string>
    <string name="domingos_e_feriados">DOMINGOS E FERIADOS</string>
    <string name="segunda_sexta">SEGUNDA À SEXTA</string>
    <string name="valor_da_passagem">VALOR DA PASSAGEM</string>
    <string name="desenvolvido_por_raul_adriano_ramos">DESENVOLVEDOR \nRAUL ADRIANO RAMOS</string>
    <string name="peabiru">PEABIRU</string>
    <string name="campo_mour_o">CAMPO MOURÃO</string>
    <string name="_6_40">6:40</string>
    <string name="_14_10">14:10</string>
    <string name="_15_00">15:00</string>
    <string name="_16_05">16:05</string>
    <string name="_12_30">12:30</string>
    <string name="_10_05">10:05</string>
    <string name="_11_00">11:00</string>
    <string name="_8_35">8:35</string>
    <string name="_9_30">9:30</string>
    <string name="_7_20">7:20</string>
    <string name="_8_00">8:00</string>
    <string name="_7_00">7:00</string>
    <string name="_11_40">11:40</string>
    <string name="_6_00">6:00</string>
    <string name="_6_45">6:45</string>
    <string name="_15_35">15:35</string>
    <string name="_17_00">17:00</string>
    <string name="_12_50">12:50</string>
    <string name="_16_40">16:40</string>
    <string name="_18_001">18:00</string>
    <string name="_18_00">18:00</string>
    <string name="_18_45">18:45</string>
</resources>
